<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraint_layout_item_rep"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".view.main.details.user.UserFragment">

    <TextView
        android:id="@+id/tv_rep_name"
        style="@style/TextViewTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_description_rep_type"
        style="@style/TextViewDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/rep_description_type"
        app:layout_constraintBottom_toBottomOf="@+id/tv_rep_type"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tv_rep_type" />

    <TextView
        android:id="@+id/tv_rep_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/tv_rep_name" />

    <TextView
        android:id="@+id/tv_description_rep_forks_count"
        style="@style/TextViewDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/rep_description_forks"
        app:layout_constraintBottom_toBottomOf="@+id/tv_rep_forks_count"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tv_rep_forks_count" />

    <TextView
        android:id="@+id/tv_rep_forks_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/tv_rep_type" />

    <TextView
        android:id="@+id/tv_description_rep_watchers_count"
        style="@style/TextViewDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/rep_description_watchers"
        app:layout_constraintBottom_toBottomOf="@+id/tv_rep_watchers_count"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tv_rep_watchers_count" />

    <TextView
        android:id="@+id/tv_rep_watchers_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/tv_rep_forks_count" />

    <TextView
        android:id="@+id/tv_description_rep_stargazers_count"
        style="@style/TextViewDescription"
        android:layout_width="wrap_content"
        android:layout_height="19dp"
        android:layout_marginStart="8dp"
        android:text="@string/rep_description_stargazers_count"
        app:layout_constraintBottom_toBottomOf="@+id/tv_rep_stargazers_count"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tv_rep_stargazers_count" />

    <TextView
        android:id="@+id/tv_rep_stargazers_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/tv_rep_watchers_count" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="160dp" />

</android.support.constraint.ConstraintLayout>